Fixing all the alignments

--- a/styles.css
+++ b/styles.css
@@ -604,10 +604,6 @@ hr {
   background-color: white;
 }
 
-/* .userForm > .form > .info {
-  flex: 0.4;
-} */
-
 .contactus {
   display: flex;
   flex-direction: column;
@@ -637,12 +633,12 @@ hr {
 
 .contactus > .name-email > input {
   flex: 0.5;
-  margin: 5% 5%;
+  margin: 20px 20px;
 }
 
 .contactus > .subject {
   flex: 0.2;
-  margin: 0 5%;
+  margin: 0px 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -650,13 +646,13 @@ hr {
 
 .contactus > .message {
   flex: 0.3;
-  margin: 0 5%;
+  margin: 0px 20px;
   text-align: start;
 }
 
 .contactus > .send {
   flex: 0.3;
-  margin-top: 1%;
+  margin-top: 4px;
   display: flex;
   align-items: center;
 }
@@ -676,7 +672,7 @@ hr {
   font-size: 28px;
 }
 .send > button {
-  margin: 0 5%;
+  margin: 0px 20px;
   padding: 10px 25px;
   background-color: #4d55c5;
   color: white;
